--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "leonb",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "data.task": "^3.1.2",
+    "mixin-object": "^3.0.0",
+    "request": "^2.88.0",
+    "sleep": "^6.1.0"
+  }
 }
